--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "gh-pages": "^6.1.1",
+    "hint": "^7.1.13",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.2",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
+ 
 }
